[package]
name = "csvd"
version = "0.1.0"
authors = ["Ramla-I <ijazramla@gmail.com>"]
edition = "2018"

[profile.dev]
opt-level = 0
debug = true


[dependencies]
libm = "0.1.2"

[dependencies.num-complex]
version = "0.2"
default-features = false

[dependencies.num-traits]
version = "0.2.6"
default-features = false